# air-quality-notifier

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Secrets.toml.example
.github/workflows/: ci.yml
src/: main.rs
src/adapters/: bot.rs  config.rs  iqair.rs  mod.rs  telegram.rs
src/domain/: models.rs  services.rs
src/use_cases/: check_air_quality.rs  mod.rs  notify_air_quality.rs
