[package]
name = "air-quality-notifier"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Automated air quality monitoring with Telegram notifications using IQAir API"
readme = "README.md"
repository = "https://github.com/yourusername/air-quality-notifier"
license = "MIT"
keywords = ["air-quality", "pm25", "telegram", "monitoring", "notifications"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
tokio-cron-scheduler = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
urlencoding = "2.1"
async-trait = "0.1"
